<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ControlDiabetes</string>
    <string name="app_title">Control Diabetes</string>
    <string name="title_activity_select_device">SelectDeviceActivity</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_bluetooth_messages">BluetoothMessagesActivity</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <string name="title_heart_rate">Heart Rate</string>
    <string name="title_step_counter">Step Counter</string>
    <string name="default_value">0</string>
    <string name="title_accelerometer">Accelerometer</string>
    
    <string name="personal_data">Personal Data</string>
    <string name="name_label">Name</string>
    <string name="id_label">ID User</string>
    <string name="age_label">Age</string>
    <string name="send_button_label">Send</string>
    <string name="watch_data">Watch Data</string>
    <string name="genre_label">Gender</string>

    <string name="listPairedDevices">List Paired Devices</string>

    <string name="intro_message">
        <![CDATA[


            This application allows two Android devices to carry out two-way text chat over
            Bluetooth. It demonstrates all the fundamental Bluetooth API capabilites, such as:
              (1) Scanning for other Bluetooth devices
              (2) Querying the local Bluetooth adapter for paired Bluetooth devices
              (3) Establishing RFCOMM channels/sockets
              (4) Connecting to a remote device
              (5) Transfering data over Bluetooth


        ]]>
    </string>
    <string name="title_activity_connect">ConnectActivity</string>
</resources>
