<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ConnectActivity"
    tools:showIn="@layout/activity_connect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:text="@string/app_title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_heart_rate"
            android:layout_marginTop="25dp"
            android:textStyle="italic"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/txtHeartRate"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_step_counter"
            android:layout_marginTop="25dp"
            android:textStyle="italic"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/txtStepCounter"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_accelerometer"
            android:layout_marginTop="25dp"
            android:textStyle="italic"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/txtAccelerometer"
            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>